Ordered List and Unordered List added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
 </head>
 <body>
     <h1>Hello World :)</h1>
-    <img src="https://images.pexels.com/photos/984858/pexels-photo-984858.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="100%">
+    <img src="https://images.pexels.com/photos/984858/pexels-photo-984858.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="20%">
+    <ol>
+        <li>Butter</li>
+        <li>Milk</li>
+        <li>Water</li>
+        <li>Oil</li>
+    </ol>
+    <br>
+    <ul>
+        <li>Milk</li>
+        <li>Salt</li>
+        <li>Flour</li>
+    </ul>
 </body>
 </html>
