--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 1</title>
+    <title>Khaled Al-Ghanim</title>
 </head>
 <body>
-    <h1>Hello World :)</h1>
-    <img src="https://images.pexels.com/photos/984858/pexels-photo-984858.jpeg?auto=compress&cs=tinysrgb&w=800&lazy=load" width="20%">
-    <ol>
-        <li>Butter</li>
-        <li>Milk</li>
-        <li>Water</li>
-        <li>Oil</li>
-    </ol>
-    <br>
-    <ul>
-        <li>Milk</li>
-        <li>Salt</li>
-        <li>Flour</li>
-    </ul>
-    <a href="./first_page.html">First Page</a>
+    <!-- Section 1 -->
+    <div style="background-color:antiquewhite;">
+        <h1>Khaled Al-Ghanim</h1>
+        <p>Hello my name is Khaled. I'm tring to learn React.</p>
+        <img src="./profile.png" alt="Profile Image" width="100px">
+        <hr>
+    </div>
+    <!-- Section 2 -->
+    <div style="background-color: azure;">
+        <h2>My Hobbies</h2>
+        <ol>
+            <a href="./programming.html"><li>Programming</li></a>
+            <li>Learning a new thing online</li>
+        </ol>
+        <ul>
+            <li>Travelling</li>
+            <a href="./swimming.html"><li>Swimming</li></a>
+        </ul>
+    </div>
 </body>
 </html>
