--- a/swimming.html
+++ b/swimming.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Swimming</title>
 </head>
 <body>
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-    </ul>
-    <a href="./index.html">Home</a>
+    <a href="./index.html">Home</a><br>
+    <img src="https://images.surferseo.art/ee11ad7a-35be-4c8f-a7b0-2bf8f93e9ab2.jpeg" width="500px">
 </body>
 </html>
