--- a/index.html
+++ b/index.html
@@ -18,13 +18,19 @@
     <div style="background-color: azure;">
         <h2>My Hobbies</h2>
         <ol>
-            <a href="./programming.html"><li>Programming</li></a>
+            <a href="./programming.html"><li><strong>Programming</strong></li></a>
             <li>Learning a new thing online</li>
         </ol>
         <ul>
             <li>Travelling</li>
             <a href="./swimming.html"><li>Swimming</li></a>
         </ul>
+        <hr>
+    </div>
+    <!-- Section 3 -->
+    <div style="background-color: black; color: white;">
+        <a href="https://twitter.com" target="_blank" >Twitter</a>
+        <a href="https://twitter.com" target="_blank" >WhatsApp</a>
     </div>
 </body>
 </html>
